# hodgepodge

./: CMakeLists.txt  HLog.cpp  HLog.h  SocketHelper.cpp  SocketHelper.h  SysInclude.h  bashscript.sh  ft2wrap.h  myGEMM.cl  t1.cpp  t2.cpp  t3.cpp  t4.cpp  t5.cpp  t6.cpp  tcast.cpp  tchrono.cpp  tcube.cpp  tcvtest.cpp  tdrm1.c  tdrm2.cpp  teigen3test.cpp  texcept.cpp  tforward.cpp  tfreetype.cpp  tfunctor_param.cpp  thread_pool.h  thread_queue.h  tipc.cpp  tjingo.cpp  tmem_problem.cpp  topencl.cpp  tremove.cpp  trtsp.cpp  tsmartptr.cpp  ttemplspec.cpp  tthreads.cpp  ttuple.cpp  tusbfs.cpp
deb-package/: help.txt
deb-package/testpkg/DEBIAN/: changelog  control  postinst  postrm  preinst  prerm
deb-package/testpkg/test/: main.c
doc/: shape_image_matching.md
kernel_module/: Makefile  hello.c  test.c
lib_jingo/: CMakeLists.txt  jingo.cpp  jingo.h
lib_jingo2/: CMakeLists.txt  jingo2.cpp
